--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,21 @@
-*.class
+.idea
+*.iml
+target
+.project
+.vagrant
+*.settings
+*.classpath
+.locket
+*.~lock*
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Python object files
+*.py[cod]
 
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# vim temporary files
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
