--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  Licensed to the Apache Software Foundation (ASF) under one or more
-  contributor license agreements.  See the NOTICE file distributed with
-  this work for additional information regarding copyright ownership.
-  The ASF licenses this file to You under the Apache License, Version 2.0
-  (the "License"); you may not use this file except in compliance with
-  the License.  You may obtain a copy of the License at
-  
-      http://www.apache.org/licenses/LICENSE-2.0
-  
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
+  ~ Copyright (c) 2017 Rocana
+  ~
+  ~ Licensed to the Apache Software Foundation (ASF) under one or more
+  ~ contributor license agreements.  See the NOTICE file distributed with
+  ~ this work for additional information regarding copyright ownership.
+  ~ The ASF licenses this file to You under the Apache License, Version 2.0
+  ~ (the "License"); you may not use this file except in compliance with
+  ~ the License.  You may obtain a copy of the License at
+  ~ 
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~ 
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
 -->
 
 <project
@@ -27,9 +29,29 @@
   <artifactId>rocana-lucene-codec</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
+  <name>Rocana Lucene Codec</name>
+  <description>
+    This is Rocana's custom Lucene codec. The initial motivation behind it is to speed up Searcher opens.
+    Opening a Rocana Search searcher causes Lucene to do a full file checksum, but we don't need that
+    checksum since HDFS itself checksums blocks. Therefore we don't want to pay the performance penalty.
+
+    If you have access to Rocana's JIRA, see [ROCANA-8229](https://scalingdata.atlassian.net/browse/ROCANA-8229).
+  </description>
+
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
   <properties>
-    <version.lucene>5.5.0</version.lucene>
+    <!-- alphabetized properties for versions -->
+    <version.javadoc.plugin>2.9.1</version.javadoc.plugin>
     <version.junit>4.12</version.junit>
+    <version.lucene>5.5.0</version.lucene>
+    <version.rat.plugin>0.11</version.rat.plugin>
+    <version.source.plugin>2.4</version.source.plugin>
 
     <!-- set Java 7 as the default -->
     <maven.compiler.source>1.7</maven.compiler.source>
@@ -42,13 +64,15 @@
 
   <dependencies>
 
+    <!-- Compile dependencies (alphabetized by groupId, artifactId) -->
+
     <dependency>
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-core</artifactId>
       <version>${version.lucene}</version>
     </dependency>
 
-    <!-- test dependencies -->
+    <!-- Test dependencies (alphabetized by groupId, artifactId) -->
 
     <dependency>
       <groupId>junit</groupId>
@@ -58,5 +82,64 @@
     </dependency>
 
   </dependencies>
+  
+  <build>
+    <plugins>
 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>${version.javadoc.plugin}</version>
+        <configuration>
+          <failOnError>true</failOnError>
+        </configuration>
+        <executions>
+          <execution>
+            <id>javadoc</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>${version.source.plugin}</version>
+        <executions>
+          <execution>
+            <id>source</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.rat</groupId>
+        <artifactId>apache-rat-plugin</artifactId>
+        <version>${version.rat.plugin}</version>
+        <executions>
+          <execution>
+            <phase>test</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <excludes>
+            <exclude>.git/**</exclude>
+            <exclude>.repository/**</exclude> <!-- maven repo on jenkins -->
+          </excludes>
+        </configuration>
+      </plugin>
+
+    </plugins>
+  </build>
+  
 </project>
