ROCANA-9120: commit initial Lucene code for rocana-lucene-codec (#5)
This is the Lucene code completely untouched, extracted from lucene-core-5.5.0-sources.jar (groupId: org.apache.lucene, artifactId: lucene-core)

In a future commit these will be tweaked, but committing them like this, in their pristine state, lets us see exactly what Rocana changed just via a simple history diff.

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,13 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-test-framework</artifactId>
+      <version>${version.lucene}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>${version.slf4j}</version>
