--- a/pom.xml
+++ b/pom.xml
@@ -170,5 +170,27 @@
 
     </plugins>
   </build>
+
+  <distributionManagement>
+    <repository>
+      <id>com.rocana.releases</id>
+      <name>Rocana Release Repository</name>
+      <url>http://repository.rocana.com/content/repositories/com.scalingdata.releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>com.rocana.snapshots</id>
+      <name>Rocana Snapshots Repository</name>
+      <url>http://repository.rocana.com/content/repositories/com.scalingdata.snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <scm>
+    <connection>scm:git:git@github.com:scalingdata/rocana-lucene-codec.git</connection>
+    <url>https://github.com/scalingdata/rocana-lucene-codec</url>
+    <developerConnection>
+      scm:git:git@github.com:scalingdata/rocana-lucene-codec.git
+    </developerConnection>
+    <tag>master</tag>
+  </scm>
   
 </project>
